--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         pendo.initialize({
             visitor: {
                 id:              'test1234',   // Required if user is logged in, default creates anonymous ID
-                 email:        'test@test.com' if using Pendo Feedback, or NPS Email
+                 email:        'test@test.com' //if using Pendo Feedback, or NPS Email
                 // full_name:    // Recommended if using Pendo Feedback
                 // role:         // Optional
 
