--- a/index.html
+++ b/index.html
@@ -722,6 +722,24 @@
                 id:           'New Account', // Highly recommended
                 username:     'toddstoffer'
             }
+           
+           {
+  "type": "track",
+  "event": "Registered",
+  "visitorId": "unique-string-id",
+  "accountId": "account-id-of-visitor",
+  "timestamp": 1524069206000,
+  "properties": {
+    "plan": "Pro Annual",
+    "accountType" : "Facebook"
+  },
+  "context": {
+    "ip": "76.253.187.23",
+    "userAgent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_11_0) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/46.0.2490.86 Safari/537.36",
+    "url": "https://mypage.com/admin",
+    "title": "My Page - Admin"
+  }
+}
         });
 
 })('5ba2118f-b462-47f9-66eb-e0eeddbf109d');
