--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-
+<a href="#" target="_blank" onclick="pendo.feedback.loginAndRedirect({anchor: this});>
   <title>SB Admin 2 -
   </title>
 
