--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             },
 
             account: {
-                id:           'test' // Required if using Pendo Feedback, default uses the value 'ACCOUNT-UNIQUE-ID'
+                id:           'test, goutham corp' // Required if using Pendo Feedback, default uses the value 'ACCOUNT-UNIQUE-ID'
                 // name:         // Optional
                 // is_paying:    // Recommended if using Pendo Feedback
                 // monthly_value:// Recommended if using Pendo Feedback
