--- a/index.html
+++ b/index.html
@@ -720,9 +720,10 @@
 
             account: {
                 id:           'New Account', // Highly recommended
-                username:     'toddstoffer'
+                username:     'Goutham Ashok Corp'
             }
-           
+               excludeAllText: true,
+          
            {
   "type": "track",
   "event": "Registered",
